--- a/templates/controls/compare.html
+++ b/templates/controls/compare.html
@@ -5,7 +5,7 @@
 {% load q %}
 
 {% block title %}
-{{ portfolio.title }} Control
+{{ portfolio.title }} Control Compare 2
 {% endblock %}
 
 {% block head %}
@@ -27,7 +27,7 @@
   }
 
   #above-tab-content, #tab-content {
-    max-width: 950px;
+    max-width: 1150px;
     margin: auto;
   }
 
@@ -60,16 +60,6 @@
     color: #666;
   }
 
-  #common-tab-count, #component-tab-count {
-    display: inline-block;
-    color: #666;
-    background-color: #dedede;
-    border-radius: 20px;
-    line-height: 1;
-    padding: 2px 6px;
-    font-size: 0.8em; font-weight: 600;
-  }
-
 </style>
 {% endblock %}
 
@@ -81,7 +71,6 @@ Remove contextbar from top of page
 
 
 <div style="margin-top: 30px">
-
 
   <div class="row" style="">
     <div id="above-tab-content" class="row">
@@ -106,7 +95,7 @@ Remove contextbar from top of page
   <div id="above-tab-content" class="row">
     <div style="float: left; padding: 0 0 0 0em;">
         <h2 class="control-heading" style="">
-            {{ control.id_display|upper }} {{ control.title }}
+            Migration Control Comparison
         </h2>
 
          {% if control.title is not None %}
@@ -129,9 +118,9 @@ Remove contextbar from top of page
     <!-- Nav tabs -->
     <ul class="nav nav-tabs" role="tablist">
       <li role="presentation" class="active"><a href="#control" aria-controls="control" role="tab" data-toggle="tab"><span class="glyphicon glyphicon-book"></span> Control</a></li>
-      <li role="presentation"><a href="#combined" aria-controls="combined" role="tab" data-toggle="tab"><span class="glyphicon glyphicon-file"></span> Combined Statement </a></li>
-      <li role="presentation"><a href="#common_controls" aria-controls="common_controls" role="tab" data-toggle="tab"><span class="glyphicon glyphicon-ok-circle"></span> Common Controls &nbsp;<div id="common-tab-count">{{ common_controls|length }}</div></a></li>
-      <li role="presentation"><a href="#component_controls" aria-controls="component_controls" role="tab" data-toggle="tab"><span class="glyphicon glyphicon-wrench"></span> Component Statements  &nbsp;<div id="common-tab-count">{{ impl_smts|length }}</div></a></li>
+      <li role="presentation"><a href="#combined" aria-controls="combined" role="tab" data-toggle="tab"><span class="glyphicon glyphicon-file"></span> Combined Statement A/B </a></li>
+      <li role="presentation"><a href="#common_controls" aria-controls="common_controls" role="tab" data-toggle="tab"><span class="glyphicon glyphicon-ok-circle"></span> Common Controls A/B</a></li>
+      <li role="presentation"><a href="#component_controls" aria-controls="component_controls" role="tab" data-toggle="tab"><span class="glyphicon glyphicon-wrench"></span> Component Statements A/B</a></li>
     </ul>
 
   <!-- Tab panes -->
@@ -152,19 +141,33 @@ Remove contextbar from top of page
       </div>
 
       <div role="tabpanel" class="tab-pane" id="combined">
-      
-        <div id="combined_smt" class="control-text"><h3>Component Implementations Statement</h3>
+      <h3>Component Implementations Statement - DC2 vs Cloud Factory</h3>
+      <div id="combined-list-from" class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6" style="border-right:2px solid #888;">
+        <div id="combined_smt" class="control-text"><h4>Migrating To: Cloud Factory</h4>
 {% for smt in impl_smts %}{{ smt.body }}
 
 {% endfor %}</div>{% comment %}Leave left justified for proper formatting of text{% endcomment %}
 <div id="combined_smt" class="control-text">{% for control in common_controls %}{{control.legacy_imp_smt}}
 {% endfor %}
 </div>
+       </div><!--/combined-list-from-->
 
+        <div id="combined-list-to" class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6" style="border-right:2px solid #888;">
+        <div id="combined_smt" class="control-text"><h4>Migrating To: Cloud Factory</h4>
+{% for smt in impl_smts %}{{ smt.body }}
+
+{% endfor %}</div>{% comment %}Leave left justified for proper formatting of text{% endcomment %}
+<div id="combined_smt" class="control-text">{% for control in common_controls %}{{control.legacy_imp_smt}}
+{% endfor %}
+</div>
+      </div><!--/combined-list-to-->
       </div>
 
       <div role="tabpanel" class="tab-pane" id="common_controls">
-        <div id="control-description" class="control-text"><h3>Common Controls</h3></div>
+        <h3>Common Controls - DC2 vs Cloud Factory</h3>
+        
+        <div id="common-list-from" class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6" style="border-right:2px solid #888;">
+        <div id="control-description" class="control-text"><h4>Migrating To: Cloud Factory</h4></div>
           {% if control.title is not None %}
             {% if common_controls|length > 0 %}
               {% for control in common_controls %}
@@ -202,10 +205,112 @@ Remove contextbar from top of page
               {% endfor %}
             {% endif %}
           {% endif %}
+        </div><!--/common-list-from -->
+
+        <div id="common-list-to" class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6" style="border-right:2px solid #888;">
+        <div id="control-description" class="control-text"><h4>Migrating To: Cloud Factory</h4></div>
+          {% if control.title is not None %}
+            {% if common_controls|length > 0 %}
+              {% for control in common_controls %}
+                <div class="panel panel-default">
+                  <div class="panel-heading" role="tabx" id="document-cc-panel_num-title">
+                    <h4 class="panel-title">
+                      <a role="button" data-toggle="collapse" data-parent="#accordion" href="#document-cc-panel_num-body" aria-expanded="true" aria-controls="document-cc-panel_num-body">
+                        {{control.name}} ...
+                      </a>
+                    </h4>
+                  </div>
+                  <div id="document-cc-panel_num-body" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="document-cc-panel_num-title">
+                    <div class="panel-body output-document">
+
+                      <div>
+                        <form>
+                          <div class="form-group">
+                            <label for="compoment">Component</label>
+                            <input type="text" class="form-control" id="component" placeholder="Name of component" value="{{control.name}}">
+                          </div>
+                          <div class="form-group">
+                            <label for="statement">Statement</label>
+                            <textarea class="form-control" id="statement" placeholder="Place control text here" rows="8" cols="50">{{control.legacy_imp_smt}}</textarea>
+                          </div>
+                          <div class="form-group">
+                            <label for="remarks">Remarks</label>
+                            <textarea class="form-control" id="app_remarks" placeholder="Place control text here" cols="50"></textarea>
+                          </div>
+                        </form>
+                      </div>
+
+                    </div>
+                  </div>
+                </div>
+              {% endfor %}
+            {% endif %}
+          {% endif %}
+        </div><!--/common-list-to -->
+
+
       </div>
+
+
+
       <div role="tabpanel" class="tab-pane" id="component_controls">
-          <div id="control-description" class="control-text"><h3>Component Implementations Statements</h3></div>
-          <div id="smt-list" class="" style="width: 90%">
+          <div id="control-description" class="control-text"><h3>Component Implementations Statements - DC2 vs Cloud Factory</h3></div>
+          
+          <div id="smt-list-from" class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6" style="border-right:2px solid #888;">
+            <h4>Migrating From: DC2</h4>
+            {% for smt in impl_smts %}
+            <div id="panel-{{ forloop.counter }}" class="panel panel-default">
+              <div class="panel-heading" role="tab" id="document-{{ forloop.counter }}-title">
+                <h4 id="panel-{{ forloop.counter }}-title" class="panel-title">
+                  <a role="button" data-toggle="collapse" data-parent="#accordion" href="#document-{{ forloop.counter }}-body" aria-expanded="true" aria-controls="document-{{ forloop.counter }}-body">
+                    <span id="producer_element-panel_num-title">{{ smt.producer_element.name }}</span>&nbsp;...
+                  </a>
+                </h4>
+              </div>
+              <div id="document-{{ forloop.counter }}-body" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="document-{{ forloop.counter }}-title">
+                <div class="panel-body output-document">
+
+              <div>
+                <form id="smt_{{ forloop.counter }}" class="smt_form">
+                  
+                    <!-- Never change name of the producer element already associated with a statement -->
+                    <input type="hidden" id="producer_element_id_{{ forloop.counter }}" name="producer_element_id" value="{{ smt.producer_element.id }}">
+                    <input type="hidden" class="form-control" id="producer_element_name_{{ forloop.counter }}" name="producer_element_name" value="{{ smt.producer_element.name }}">
+
+                  <div class="form-group">
+                    <input type="hidden" id="smt_id" name="smt_id" value="{{ smt.id }}">
+                    <label for="statement">Statement</label>
+                    <textarea style="min-height:200px;overflow-y: scroll;" class="form-control" id="body_{{ forloop.counter }}" name="body" placeholder="How component contributes to control"  cols="50">{{ smt.body }}</textarea>
+                  </div>
+                  <div class="form-group">
+                    <label for="remarks">Remarks</label>
+                    <textarea style="min-height:70px; overflow-y: scroll;" class="form-control" id="remarks_{{ forloop.counter }}" name="remarks" placeholder="Add remarks for team" cols="50">{{ smt.remarks }}</textarea>
+                  </div>
+
+                  <input type="hidden" id="control_id" name="control_id" value="{{ control.id }}">
+                  <input type="hidden" id="system_id" name="system_id" value="{{ system.id }}">
+                  <input type="hidden" id="sid" name="sid" value="{{ control.id }}">
+                  <input type="hidden" id="sid_class" name="sid_class" value="800-53rev4">
+                  <input type="hidden" id="statement_type" name="statement_type" value="control_implementation">
+
+                <div class="modal-footer">
+                  <div id="success-msg-smt_{{ forloop.counter }}" style="display: inline; margin-right: 20px; color: gray;"></div>
+                  <button type="button" name="delete" value="delete" class="btn btn-xs btn-danger" onclick="delete_smt('smt_{{ forloop.counter }}');return false;">Delete</button>
+                  <button type="button" name="save" value="save" class="btn btn-xs btn-success" onclick="save_smt('smt_{{ forloop.counter }}');return false;">Save</button>
+                </div>
+
+                </form>
+              </div>
+
+                </div>
+              </div>
+            </div>
+
+            {% endfor %}
+          </div><!--/smt-list-->
+
+          <div id="smt-list" class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6" style="">
+            <h4>Migrating To: Cloud Factory</h4>
             {% for smt in impl_smts %}
             <div id="panel-{{ forloop.counter }}" class="panel panel-default">
               <div class="panel-heading" role="tab" id="document-{{ forloop.counter }}-title">
