--- a/templates/controls/detail.html
+++ b/templates/controls/detail.html
@@ -9,37 +9,15 @@
 {% endblock %}
 
 {% block head %}
+{% include "controls/_style-controls.html" %}
 <style>
-  .project-image {
-    width: 20px;
-    float: left;
-    margin: 4px 0 5px 8px;
-  }
 
-  .inline {
-    display: inline;
+  #above-tab-content, #tab-content {
+    max-width: 950px;
+    margin: auto;
   }
-
-  h3 {
-    color: #888;
-    #font-weight: bold;
-    margin-top: 20px;
-  }
-
-  .control-text {
-    white-space: pre-wrap;
-    font-size: 12pt;
-    max-width: 700px;
-    font-family: trebuchet ms, sans-serif;
-    /*text-align: justify;
-    text-justify: inter-word;*/
-  }
-
-  #control_lookup input {
-    width: 130px;
-  }
-
 </style>
+
 {% endblock %}
 
 Remove contextbar from top of page
@@ -50,31 +28,51 @@ Remove contextbar from top of page
 
 <div style="margin-top: 30px">
   <div class="container">
-    <div style="float: right; margin: 0 0.5em 0em 5em;">
-        <form id="control_lookup" method="get" action="/controls/" onsubmit="show_control_by_id(); return false;">
-          <input type="text" value="" name="id" placeholder="Enter control id"/>
-              <button type="submit" class="btn btn-success">Look up</button>
-        </form>
+
+    <div class="row" style="">
+      <div id="above-tab-content" class="row">
+        <!-- Page Title-->
+        <div style="float: left;">
+          {% if control.title is not None %}
+          <h2 id="control-heading" class="">
+            {{ control.id_display|upper }} {{ control.title }}
+          </h2>
+          {% else %}
+            Control was not found in the catalog.
+          {% endif %}
+        </div>
+        <!-- Control Lookup-->
+        <div style="float: right;">
+            <form id="control-lookup" method="get" action="/controls/" onsubmit="show_control_by_id(); return false;">
+              <input type="text" name="id" placeholder="Enter control id" value="{% if control %}{{ control.id_display|upper }}{% endif %}">
+                  <button type="submit" class="btn btn-success">Look up</button>
+                  <!-- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                  <a href="/">families</a> -->
+            </form>
+        </div>
+      </div>
+    </div><!--/row-->
+    <p>&nbsp;</p>
+
+    <div id="tab-content" class="row rows-header" style="">
+        <div id="" class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">Official Control Text</div>
     </div>
 
-    {% if control.title is not None %}
-    <h2 id="control-heading" class="">
-      <small style="color: #888;">{{ catalog.catalog_key_display }}</small><br>
-      {{ control.id_display|upper }} {{ control.title }}
-    </h2>
-    <div>
-      <div id="control-description" class="control-text"><h3>Description</h3>{{ control.description }}</div>
-      <div id="control-guidance"  class="control-text"><h3>Guidance</h3>{{ control.guidance }}</div>
+    <div id="tab-content" class="row">
+      {% if control.title is not None %}
+      <div id="tab-content" class="row row-control" style="">
+        <div id="" class="col-xs-11 col-sm-11 col-md-11 col-lg-11 col-xl-11">
+          <div id="control-description" class="control-text"><h3>Description</h3>{{ control.description }}</div>
+          <div id="control-guidance"  class="control-text"><h3>Guidance</h3>{{ control.guidance }}</div>
+        </div>
+      </div>
+      {% else %}
+      <div id="control-message">
+        <p>Control is not found in the control catalog.</p>
+      </div>
+      {% endif %}
     </div>
-    {% else %}
-    <h2 id="control-heading" class="">
-      <small style="color: #888;">{{ catalog.catalog_key_display }}</small><br>
-      {{ control.id }}
-    </h2>
-    <div id="control-message">
-      <p>The control {{ control.id }} was not found in the control catalog.</p>
-    </div>
-    {% endif %}
+
   </div>
 </div>
       {{ block.super }}
