--- a/templates/controls/index-group.html
+++ b/templates/controls/index-group.html
@@ -10,34 +10,60 @@
 
 {% block head %}
 {% include "controls/_style-controls.html" %}
+<style>
+
+  #above-tab-content, #tab-content {
+    max-width: 950px;
+    margin: auto;
+  }
+</style>
 {% endblock %}
 
-Remove contextbar from top of page
 {% block contextbar %}{% endblock %}
 
-% block body-wide %
 {% block body %}
 
 <div style="margin-top: 30px">
   <div class="container">
-    <div style="float: right; margin: 0 0.5em 0em 5em;">
-        <form id="control_lookup" method="get" action="/controls/" onsubmit="show_control_by_id(); return false;">
-          <input type="text" value="" name="id" placeholder="Enter control id"/>
-              <button type="submit" class="btn btn-success">Look up</button>
-        </form>
-    </div>
 
-    <h2 id="control-heading" class="">
-      <small style="color: #888;">{{ catalog.catalog_key_display }}</small><br>
-      {{ group.id|upper }} - {{ group.title }} Controls
-    </h2>
-    <div>
-      <ul>
-      {% for cl in group.controls %}
-        <li><a href="/controls/catalogs/{{ catalog.catalog_key }}/control/{{ cl.id }}">{{ cl.id|upper }}</a> - {{ cl.title }}</li>
-      {% endfor %}
-      </ul>
+    <div class="row" style="">
+      <div id="above-tab-content" class="row">
+        <!-- Page Title-->
+        <div style="float: left;">
+          <h2 id="control-heading" class="">
+            {% if "SP-800-53" in catalog.catalog_key_display %}
+              Control Families {{system.root_element.name}} > {{ group.id|upper }} - {{ group.title }} Controls
+            {% else %}
+              Control Groupings {{system.root_element.name}} > {{ group.id|upper }} - {{ group.title }} Controls
+            {% endif %}
+          </h2>
+        </div>
+        <!-- Control Lookup-->
+        <div style="float: right;">
+            <form id="control-lookup" method="get" action="/controls/" onsubmit="show_control_by_id(); return false;">
+              <input type="text" name="id" placeholder="Enter control id" value="{% if control %}{{ control.id_display|upper }}{% endif %}">
+                  <button type="submit" class="btn btn-success">Look up</button>
+                  <!-- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                  <a href="/">families</a> -->
+            </form>
+        </div>
+      </div>
+    </div><!--/row-->
+    <p>&nbsp;</p>
+
+    <div id="tab-content" class="row rows-header" style="">
+        <div id="" class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">{{ catalog.catalog_key_display }}</div>
     </div>
+   {% for cl in group.controls %}
+    <div id="tab-content" class="row row-control" style="">
+        <div id="" class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
+            <a href="/controls/catalogs/{{ catalog.catalog_key }}/control/{{ cl.id }}">{{ cl.id|upper }}</a>
+        </div>
+        <div id="" class="col-xs-5 col-sm-5 col-md-5 col-lg-5 col-xl-5">
+            {{ cl.title }}
+        </div>
+    </div>
+    {% endfor %}
 
   </div>
 </div>
