--- a/templates/controls/compare.html
+++ b/templates/controls/compare.html
@@ -376,7 +376,7 @@ Remove contextbar from top of page
         // Submits control id for Control look up box
         function show_control_by_id() {
           var control_id = $('#control-lookup').find('input[name="id"]').val();
-          var url = "/systems/{{ system.id }}/controls/catalogs/{{ catalog.catalog_key }}/control/"+control_id+"/editor";
+          var url = "/systems/{{ system.id }}/controls/catalogs/{{ catalog.catalog_key }}/control/"+control_id+"/compare";
           window.location.href = url;
         }
       </script>
