--- a/templates/controls/index-catalogs.html
+++ b/templates/controls/index-catalogs.html
@@ -20,25 +20,37 @@ Remove contextbar from top of page
 
 <div style="margin-top: 30px">
   <div class="container">
-    <div style="float: right; margin: 0 0.5em 0em 5em;">
-        <form id="control_lookup" method="get" action="/controls/" onsubmit="show_control_by_id(); return false;">
-          <input type="text" value="" name="id" placeholder="Enter control id"/>
-              <button type="submit" class="btn btn-success">Look up</button>
-        </form>
-    </div>
 
-    <h2 id="control-heading" class="">
-      Control Catalogs
-    </h2>
-    <div>
-      <ul>
-      {% for catalog in catalogs.index %}
-        <li><a href="./catalogs/{{ catalog.catalog_key }}">{{ catalog.catalog_key_display }}</a> - {{ catalog.metadata.title }}</li>
-      {% endfor %}
-      </ul>
+    <div class="row" style="">
+      <div id="above-tab-content" class="row">
+        <!-- Page Title-->
+        <div style="float: left;">
+          <h2 id="control-heading" class="">
+            Control Catalogs
+          </h2>
+        </div>
+        {% include "controls/_control_lookup.html" %}
+      </div>
+    </div><!--/row-->
+    <p>&nbsp;</p>
+
+    <div id="tab-content" class="row rows-header" style="">
+        <div id="" class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">Catalogs</div>
     </div>
+   {% for catalog in catalogs.index %}
+    <div id="tab-content" class="row row-control" style="">
+        <div id="" class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
+            <a href="./catalogs/{{ catalog.catalog_key }}">{{ catalog.catalog_key_display }}</a>
+        </div>
+        <div id="" class="col-xs-9 col-sm-9 col-md-9 col-lg-9 col-xl-9">
+            {{ catalog.metadata.title }}
+        </div>
+    </div>
+    {% endfor %}
+
   </div>
 </div>
+
 
 {{ block.super }}
 {% endblock %}
