Add export xlsx file in Xacta control format

--- a/templates/systems/controls_selected.html
+++ b/templates/systems/controls_selected.html
@@ -40,9 +40,11 @@
   </div><!--/row-->
     <p>&nbsp;</p>
 
-   
+
     <div id="tab-content" class="row rows-header" style="">
         <div id="" class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">information</div>
+        <div id="" class="col-xs-9 col-sm-9 col-md-9 col-lg-9 col-xl-9">&nbsp;</div>
+        <div id="" class="col-xs-1 col-sm-1 col-md-1 col-lg-1 col-xl-1"><a href="selected/export/xacta/xlsx">export</a></div>
     </div>
    {% for control in controls %}
     <div id="tab-content" class="row row-control" style="">
