Fix control lookup errors on control group page
Control group page had older version of lookup script
that did not properly include the OSCAL catalog key.

Also remove control lookup from listing of catalogs because
we don't have catalog key to narrow search.

--- a/templates/controls/index-catalogs.html
+++ b/templates/controls/index-catalogs.html
@@ -29,7 +29,6 @@ Remove contextbar from top of page
             Control Catalogs
           </h2>
         </div>
-        {% include "controls/_control_lookup.html" %}
       </div>
     </div><!--/row-->
     <p>&nbsp;</p>
@@ -56,11 +55,12 @@ Remove contextbar from top of page
 {% endblock %}
 
 {% block scripts %}
-<script>
-  function show_control_by_id() {
-    var control_id = $('#control_lookup').find('input[name="id"]').val();
-    var url = "/controls/"+"800-53"+"/"+control_id+"/";
-    window.location.href = url;
-  }
-</script>
+      <script>
+        // Submits control id for Control look up box
+        function show_control_by_id() {
+          var control_id = $('#control-lookup').find('input[name="id"]').val();
+          var url = "/controls/catalogs/{{ catalog.catalog_key }}/control/"+control_id;
+          window.location.href = url;
+        }
+      </script>
 {% endblock %}
