Add refresh output doc button to task finished pages
Add button to output documents on the task finish page to
allow users to force refresh of the output documents.

This will clear the cache of all the task.

User may have updated system information
and the result of the system update has been cached somewhere in the stack of
output documents that compose answers to a value in this document.
We cannot always tell what update has caused a cache of an output document to be dirty.

--- a/templates/task-finished.html
+++ b/templates/task-finished.html
@@ -109,8 +109,14 @@
               </a>
               {% if document.id %}
                 <div class="pull-right">
+                  <span class="glyphicon glyphicon-refresh"
+                    style="cursor: pointer"
+                    alt="Refresh document"
+                    onclick="refresh_output_doc({{project.root_task.module.app.id}});"> </span>
+                    &nbsp;&nbsp;
                   <span class="glyphicon glyphicon-download-alt"
                     style="cursor: pointer"
+                    alt="Download document"
                     onclick="download_document('{{document.id|escapejs}}')"> </span>
                 </div>
               {% endif %}
@@ -286,5 +292,27 @@
       })
     }
   });
+
+  function refresh_output_doc(app_id) {
+      if (upgrade_app_option_confirm
+         {% if is_question_page %}
+         && !confirm("All instances of '{{task.project.root_task.title}}' will be updated.\n\nAre you sure you want to upgrade?"))
+         {% else %}
+         && !confirm("Force refresh of output document(s) in '{{project.root_task.title}}'?"))
+         {% endif %}
+        return;
+      ajax_with_indicator({
+          url: "/tasks/_refresh-output-doc",
+          method: "POST",
+          data: {
+            app: app_id,
+            force: upgrade_app_option_force ? "true" : "false"
+          },
+          keep_indicator_forever: true, // keep the ajax indicator up forever --- it'll go away when we issue the redirect or reload
+          success: function(res) {
+            location.reload();
+          }
+      })
+    }
   </script>
 {% endblock %}
