Fix bug causing start app as answr to modules to fail
Reset start app form to pass a GET instead of a post
to correctly pass question parameter to store.

--- a/templates/portfolios/select-portfolio-modal.html
+++ b/templates/portfolios/select-portfolio-modal.html
@@ -5,9 +5,8 @@
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
         <h4 class="modal-title" id="invitation_modal_title">Select a Portfolio</h4>
       </div>
-      <form action="{% url 'store' %}" role="form" method="post">
+      <form action="{% url 'store' %}" role="form" method="get">
         <div class="modal-body">
-          {% csrf_token %}
           {{ project_form.portfolio }}
          </div>
          <div class="modal-footer">
