--- a/templates/base.html
+++ b/templates/base.html
@@ -77,15 +77,11 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-sm-12">
-              <div class="row">
-                <div class="col-xs-12">
-                    &copy; GovReady {% now "Y" %}.
-                    <a href="/privacy">Privacy Policy</a>.
-                    <a href="/terms-of-service">Terms of Service</a>. 
-                </div>
-                <div class="col-xs-12">
-                  ver {{APP_VERSION_STRING}}
-                </div>
+              <div class="row" style="width: 768px; margin: auto; border-top: 1px solid #eee; padding-top: 24px;">
+                <div class="col-xs-3">&copy; GovReady PBC {% now "Y" %}</div>
+                <div class="col-xs-3" style="text-align: center;"><a href="/privacy">Privacy Policy</a></div>
+                <div class="col-xs-3" style="text-align: center;""><a href="/terms-of-service">Terms of Service</a></div>
+                <div class="col-xs-3" style="text-align: right;">{{APP_VERSION_STRING}}</div>
             </div>
           </div>
         </div>
