--- a/templates/app-store.html
+++ b/templates/app-store.html
@@ -18,9 +18,15 @@ Compliance Apps
   }
 
   h2 {
-    margin: 1em 0 .5em 0;
-    font-variant: small-caps;
-    font-size: 25px;
+    width: 40%;
+    margin: 2.5em auto 24px auto;
+    padding: 8px;
+    border-bottom: 1px solid #ccc;
+    background-color: #fff;
+    border-radius: 10px;
+    font-size: 24px;
+    color: #666;
+    text-align: center;
   }
 
   .app-category-nav {
@@ -160,7 +166,7 @@ Compliance Apps
 {% for app_category in apps %}
 <div class="app-category" data-category="{{app_category.title}}">
 {% if apps|length > 1 %} {# only display category titles if there is more than one category available #}
-<h2>{{app_category.title}}</h2>
+<h2>{{app_category.title}} Apps</h2>
 {% endif %}
 
 <div class="row">
